--- a/src/index.html
+++ b/src/index.html
@@ -16,7 +16,7 @@
     gtag('config', 'UA-142689179-1');
     </script>
 
-    <title>Suresh Murali's Portfolio</title>
+    <title>Vijaykumar Portfolio</title>
 </head>
 <body>
     <div id="root"></div>
